Fixed word break with chat messages. No more horizontal scroll!

--- a/RoomieWeb/Content/css/app.less
+++ b/RoomieWeb/Content/css/app.less
@@ -765,6 +765,7 @@ ul.invitelist {
 				div.body {
 					font-size:16px;
 					white-space: pre-line;
+					word-wrap:break-word;
 				}
 
 				div.information {
